assets/scss/layouts/body/_body.scss
// =============================================================================
// BODY (CSS)
//
// 1. Header is fixed on small screens, use the content body to create the whitespace
//    between it and the header on all situations. If you change the spacing here,
//    please update .heroCarousel too.
//
// =============================================================================


.body {
    margin-bottom: spacing("double") * 2;
    margin-top: 0;
    padding-top: 0;
    margin-bottom: 0;

    @include breakpoint("medium") {
        margin-top: 0;
        padding-top: 70px;
        margin-bottom: 0;
    }
}


.page {
    @include grid-row(
        $behavior: nest
    );
}

.page-content,
.page-content--full {
    @include grid-column(12);
}

.page-content--centered {

    @include breakpoint("medium") {
        @include grid-column(
            $columns: 8,
            $center: true
        );
    }

    &>p {
        display: none;
    }
}

.page-content--textCenter {
    text-align: center;
}

.page-sidebar {
    @include grid-column(12);
    position: relative;

    @include breakpoint("medium") {
        @include grid-column(3);

        + .page-content {
            @include grid-column(9);
        }
    }
}

.full {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    max-width: initial;
}

